compiler-core/src/parse/snapshots/gleam_core__parse__tests__byte_order_mark_module.snap
---
source: compiler-core/src/parse/tests.rs
expression: "﻿\nconst local_const = other.Record(..other.base, field: value)\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: ModuleConstant(
                    ModuleConstant {
                        documentation: None,
                        location: SrcSpan {
                            start: 4,
                            end: 21,
                        },
                        publicity: Private,
                        name: "local_const",
                        name_location: SrcSpan {
                            start: 10,
                            end: 21,
                        },
                        annotation: None,
                        value: RecordUpdate {
                            location: SrcSpan {
                                start: 24,
                                end: 64,
                            },
                            constructor_location: SrcSpan {
                                start: 24,
                                end: 36,
                            },
                            module: Some(
                                (
                                    "other",
                                    SrcSpan {
                                        start: 24,
                                        end: 29,
                                    },
                                ),
                            ),
                            name: "Record",
                            record: RecordBeingUpdated {
                                base: Var {
                                    location: SrcSpan {
                                        start: 39,
                                        end: 49,
                                    },
                                    module: Some(
                                        (
                                            "other",
                                            SrcSpan {
                                                start: 39,
                                                end: 44,
                                            },
                                        ),
                                    ),
                                    name: "base",
                                    constructor: None,
                                    type_: (),
                                },
                                location: SrcSpan {
                                    start: 37,
                                    end: 49,
                                },
                            },
                            arguments: [
                                RecordUpdateArg {
                                    label: "field",
                                    location: SrcSpan {
                                        start: 51,
                                        end: 63,
                                    },
                                    value: Var {
                                        location: SrcSpan {
                                            start: 58,
                                            end: 63,
                                        },
                                        module: None,
                                        name: "value",
                                        constructor: None,
                                        type_: (),
                                    },
                                },
                            ],
                            type_: (),
                            field_map: Unknown,
                        },
                        type_: (),
                        deprecation: NotDeprecated,
                        implementations: Implementations {
                            gleam: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            can_run_on_native: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                            uses_native_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
        names: Names {
            local_types: {},
            imported_modules: {},
            type_variables: {},
            local_value_constructors: {},
            reexport_aliases: {},
        },
        unused_definition_positions: {},
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [],
        new_lines: [
            3,
            64,
        ],
        trailing_commas: [],
    },
}
